--- a/src/main/resources/localisation/en/feedback.properties
+++ b/src/main/resources/localisation/en/feedback.properties
@@ -12,13 +12,13 @@ HowManyArrayReads_DistractorNumAllocated = This is the number of arrays which we
 HowManyArrayReads_DistractorWrites = This is the number of array writes. When you have %s, you're writing %s to the array %s's %s-th position.
 HowManyArrayReads_DistractorLengthAccesses = This is the number of times an array's %s is accessed. These don't read any array positions!
 HowManyArrayReads_DistractorLengthOfAllocated = This is the total length of every array allocated!
-HowManyArrayReads_Correct = You read an array %s's %s-th position using %s. In this case, the array reads were: %s.
+HowManyArrayReads_Correct = You read an array %s's %s-th position using %s.
 
 HowManyArrayWrites_DistractorNumAllocated = This is the number of arrays which were allocated: %s.
 HowManyArrayWrites_DistractorReads = This is the number of array reads. when you have %s, you're writing %s to the array %s's %s-th position.
 HowManyArrayWrites_DistractorLengthAccesses = This is the number of times an array's %s is accessed. These don't write to any array positions!
 HowManyArrayWrites_DistractorLengthOfAllocated = This is the total length of every array allocated!
-HowManyArrayWrites_Correct = You write %s to an array %s's %s-th position using %s. In this case, the array writes were: %s.
+HowManyArrayWrites_Correct = You write %s to an array %s's %s-th position using %s.
 
 HowManyFunctionCalls_DistractorWrongProcedure = This is the number of calls to %s, not %s.
 HowManyFunctionCalls_DistractorTotalAllProcedures = This is the number of total calls (to all functions), not just those to %s!
