--- a/src/main/resources/localisation/en/questions.properties
+++ b/src/main/resources/localisation/en/questions.properties
@@ -103,10 +103,14 @@ WhichVariablesInScope = The variable %s is undefined in line %s. Which variables
 # ======================= #
 # Runtime Error Questions #
 # ======================= #
-ArrayIndexOutOfBounds = The function call %s threw an ArrayIndexOutOfBounds exception at line %s: the index %s is invalid for the array %s.
-WhichLastValidArrayIndex = Which is the last valid index of the array %s?
-WhichLengthOfArray = Which is the length of the array %s?
-WhichVariableUsedToIndexArray = Which variable is being used to access the array %s?
+ArrayIndexOutOfBounds = The function call %s threw an "ArrayIndexOutOfBounds" exception at line %s: the index %s is invalid for the array %s.
+WhichValidArrayIndices = Which are the valid indices of the array referenced by %s?
+WhichLengthOfArray = Which is the length of the array referenced by %s?
+WhichVariableUsedToIndexArray = Which variable is being used to access the array referenced by %s?
+
+RecursionStackOverflow = A StackOverflow exception occurred during the function call %s.
+HasRecursionBaseCases = Does the function %s have any non-recursive base cases?
+WhichRecursionBaseCases = Which are the non-recursive base cases of the function %s?
 
 # ==================== #
 # Preemptive Questions #
