--- a/src/main/resources/localisation/pt/feedback.properties
+++ b/src/main/resources/localisation/pt/feedback.properties
@@ -12,13 +12,13 @@ HowManyArrayReads_DistractorNumAllocated = Este é o número de vetores alocados: 
 HowManyArrayReads_DistractorWrites = Este é o número de escritas em vetores. Quando tens %s, estás a escrever %s no vetor %s na posição $s.
 HowManyArrayReads_DistractorLengthAccesses = Este é o número de vezes que o %s de um vetor é acedido. Isto não lê nenhuma posição do vetor!
 HowManyArrayReads_DistractorLengthOfAllocated = Este é o comprimento total de todos os vetores alocados!
-HowManyArrayReads_Correct = Leste a posição %s do vetor %s usando %s. Neste caso, as leituras de vetores foram: %s.
+HowManyArrayReads_Correct = Leste a posição %s do vetor %s usando %s.
 
 HowManyArrayWrites_DistractorNumAllocated = Este é o número de vetores alocados: %s.
 HowManyArrayWrites_DistractorReads = Este é o número de leituras de vetores. quando tens %s, estás a escrever %s no vetor %s na posição %s.
 HowManyArrayWrites_DistractorLengthAccesses = Este é o número de vezes que o %s de um vetor é acedido. Isto não escreve em nenhuma posição do vetor!
 HowManyArrayWrites_DistractorLengthOfAllocated = Este é o comprimento total de todos os vetores alocados!
-HowManyArrayWrites_Correct = Escreves %s num vetor %s na posição %s usando %s. Neste caso, as escritas a vetores foram: %s.
+HowManyArrayWrites_Correct = Escreves %s num vetor %s na posição %s usando %s.
 
 HowManyFunctionCalls_DistractorWrongProcedure = Este é o número de chamadas a %s, não a %s.
 HowManyFunctionCalls_DistractorTotalAllProcedures = Este é o número total de chamadas (a todas as funções), não apenas às chamadas a %s!
