--- a/src/main/resources/localisation/pt/questions.properties
+++ b/src/main/resources/localisation/pt/questions.properties
@@ -103,10 +103,14 @@ WhichVariablesInScope = A variável %s não está definida na linha %s. Que variáve
 # ======================= #
 # Runtime Error Questions #
 # ======================= #
-ArrayIndexOutOfBounds = A invocação %s lançou uma exceção ArrayIndexOutOfBounds na linha %s: o índice %s é inválido para o vetor %s.
-WhichLastValidArrayIndex = Qual é o último índice válido do vetor %s?
-WhichLengthOfArray = Qual é o comprimento do vetor %s?
-WhichVariableUsedToIndexArray = Que variável é usada para indexar o vetor %s?
+ArrayIndexOutOfBounds = A invocação %s lançou uma exceção "ArrayIndexOutOfBounds" na linha %s: o índice %s é inválido para o vetor %s.
+WhichValidArrayIndices = Quais são os índices válidos do vetor referenciado por %s?
+WhichLengthOfArray = Qual é o comprimento do vetor referenciado por %s?
+WhichVariableUsedToIndexArray = Que variável é usada para indexar o vetor referenciado por %s?
+
+RecursionStackOverflow = Uma exceção StackOverflow ocorreu durante a invocação %s.
+HasRecursionBaseCases = A função %s tem algum caso-base não recursivo?
+WhichRecursionBaseCases = Quais são os casos-base não recursivos da função %s?
 
 # ==================== #
 # Preemptive Questions #
